--- a/web/templates/layout/app.html.eex
+++ b/web/templates/layout/app.html.eex
@@ -12,65 +12,56 @@
   </head>
 
   <body>
-    <header class="header">
-      <div class="container">
-        <!-- Left side -->
-        <div class="header-left">
-          <a class="header-item" href="#">
-            <img src="http://craneu2.get-out-there.com/wp-content/uploads/2014/12/Customized-Safety-Training-Icon-01.png" alt="Logo">
-          </a>
-          <a class="header-tab" href="#">
-            Tab
-          </a>
-          <a class="header-tab is-active" href="#">
-            Active tab
-          </a>
-        </div>
-
-        <!-- Hamburger menu (on mobile) -->
-        <span class="header-toggle">
-          <span></span>
-          <span></span>
-          <span></span>
-        </span>
-
-        <!-- Right side -->
-        <div class="header-right header-menu">
-          <span class="header-item">
-            <a href="#">Nav item</a>
-          </span>
-          <span class="header-item">
-            <a href="#">Other nav item</a>
-          </span>
-          <span class="header-item">
-            <a class="button" href="#">Button</a>
-          </span>
-        </div>
+    <div class="top-bar">
+      <div class="top-bar-left">
+        <ul class="menu">
+          <li class="menu-text">Marketing Site</li>
+          <li><a href="#">One</a></li>
+          <li><a href="#">Two</a></li>
+        </ul>
       </div>
-    </header>
+      <div class="top-bar-right">
+        <ul class="menu">
+          <li><a href="#">Three</a></li>
+          <li><a href="#">Four</a></li>
+          <li><a href="#">Five</a></li>
+          <li><a href="#">Six</a></li>
+        </ul>
+      </div>
+    </div>
 
     <%=  msg_tag(@conn,:error) %>
     <%=  msg_tag(@conn,:info) %>
 
     <%= render @view_module, @view_template, assigns %>
     
-    <footer class="footer">
-      <div class="container">
-        <div class="content is-centered">
-          <p>
-            <strong>Bulma</strong> by <a href="http://jgthms.com">Jeremy Thomas</a>. The source code is licensed
-            <a href="http://opensource.org/licenses/mit-license.php">MIT</a>. The website content
-            is licensed <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC ANS 4.0</a>.
-          </p>
-          <p>
-            <a class="icon" href="https://github.com/jgthms/bulma">
-              <i class="fa fa-github"></i>
-            </a>
-          </p>
+    <div class="callout large secondary">
+      <div class="row">
+        <div class="large-4 columns">
+          <h5>Vivamus Hendrerit Arcu Sed Erat Molestie</h5>
+          <p>Curabitur vulputate, ligula lacinia scelerisque tempor, lacus lacus ornare ante, ac egestas est urna sit amet arcu. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed molestie augue sit.</p>
+        </div>
+        <div class="large-3 large-offset-2 columns">
+          <ul class="menu vertical">
+            <li><a href="#">One</a></li>
+            <li><a href="#">Two</a></li>
+            <li><a href="#">Three</a></li>
+            <li><a href="#">Four</a></li>
+          </ul>
+        </div>
+        <div class="large-3 columns">
+          <ul class="menu vertical">
+            <li><a href="#">One</a></li>
+            <li><a href="#">Two</a></li>
+            <li><a href="#">Three</a></li>
+            <li><a href="#">Four</a></li>
+          </ul>
         </div>
       </div>
-    </footer>
-
+    </div>
     <script src="<%= static_path(@conn, "/js/app.js") %>"></script>
+    <script>
+         $(document).foundation();
+    </script>
   </body>
 </html>
