--- a/web/templates/page/index.html.eex
+++ b/web/templates/page/index.html.eex
@@ -1,12 +1,184 @@
 <section class="hero">
-  <div class="hero-content">
-    <div class="container">
-      <h1 class="title">
-        Hero title
-      </h1>
-      <h2 class="subtitle">
-        Hero subtitle
-      </h2>
+  <div class="row intro">
+    <div class="small-centered medium-uncentered medium-6 large-7 columns">
+      <h1>Truth? What truth?</h1>
+      <p>Don't you want to take a leap of faith? Or become an old man, filled with regret, waiting to die alone!</p>
+    </div>
+    <div class="small-centered medium-uncentered medium-6 large-5 columns">
+      <div class="tech-img"></div>
     </div>
   </div>
 </section>
+
+      <div class="row column text-center">
+         <h2>Our Newest Products</h2>
+         <hr>
+      </div>
+      <div class="row small-up-2 large-up-4">
+         <div class="column">
+            <img class="thumbnail" src="http://placehold.it/300x400">
+            <h5>Nulla At Nulla Justo, Eget</h5>
+            <p>$400</p>
+            <a href="#" class="button expanded">Buy</a>
+         </div>
+         <div class="column">
+            <img class="thumbnail" src="http://placehold.it/300x400">
+            <h5>Nulla At Nulla Justo, Eget</h5>
+            <p>$400</p>
+            <a href="#" class="button expanded">Buy</a>
+         </div>
+         <div class="column">
+            <img class="thumbnail" src="http://placehold.it/300x400">
+            <h5>Nulla At Nulla Justo, Eget</h5>
+            <p>$400</p>
+            <a href="#" class="button expanded">Buy</a>
+         </div>
+         <div class="column">
+            <img class="thumbnail" src="http://placehold.it/300x400">
+            <h5>Nulla At Nulla Justo, Eget</h5>
+            <p>$400</p>
+            <a href="#" class="button expanded">Buy</a>
+         </div>
+      </div>
+      <hr>
+      <div class="row column">
+         <div class="callout primary">
+            <h3>Really big special this week on items.</h3>
+         </div>
+      </div>
+      <hr>
+      <div class="row column text-center">
+         <h2>Some Other Neat Products</h2>
+         <hr>
+      </div>
+      <div class="row small-up-2 medium-up-3 large-up-6">
+         <div class="column">
+            <img class="thumbnail" src="http://placehold.it/300x400">
+            <h5>Nulla At Nulla Justo, Eget</h5>
+            <p>$400</p>
+            <a href="#" class="button small expanded hollow">Buy</a>
+         </div>
+         <div class="column">
+            <img class="thumbnail" src="http://placehold.it/300x400">
+            <h5>Nulla At Nulla Justo, Eget</h5>
+            <p>$400</p>
+            <a href="#" class="button small expanded hollow">Buy</a>
+         </div>
+         <div class="column">
+            <img class="thumbnail" src="http://placehold.it/300x400">
+            <h5>Nulla At Nulla Justo, Eget</h5>
+            <p>$400</p>
+            <a href="#" class="button small expanded hollow">Buy</a>
+         </div>
+         <div class="column">
+            <img class="thumbnail" src="http://placehold.it/300x400">
+            <h5>Nulla At Nulla Justo, Eget</h5>
+            <p>$400</p>
+            <a href="#" class="button small expanded hollow">Buy</a>
+         </div>
+         <div class="column">
+            <img class="thumbnail" src="http://placehold.it/300x400">
+            <h5>Nulla At Nulla Justo, Eget</h5>
+            <p>$400</p>
+            <a href="#" class="button small expanded hollow">Buy</a>
+         </div>
+         <div class="column">
+            <img class="thumbnail" src="http://placehold.it/300x400">
+            <h5>Nulla At Nulla Justo, Eget</h5>
+            <p>$400</p>
+            <a href="#" class="button small expanded hollow">Buy</a>
+         </div>
+      </div>
+      <hr>
+      <div class="row">
+         <div class="medium-4 columns">
+            <h4>Top Products</h4>
+            <div class="media-object">
+               <div class="media-object-section">
+                  <img class="thumbnail" src="http://placehold.it/100x100">
+               </div>
+               <div class="media-object-section">
+                  <h5>Nunc Eu Ullamcorper Orci</h5>
+                  <p>Quisque eget odio ac lectus vestibulum faucibus eget in metus. In pellentesque.</p>
+               </div>
+            </div>
+            <div class="media-object">
+               <div class="media-object-section">
+                  <img class="thumbnail" src="http://placehold.it/100x100">
+               </div>
+               <div class="media-object-section">
+                  <h5>Nunc Eu Ullamcorper Orci</h5>
+                  <p>Quisque eget odio ac lectus vestibulum faucibus eget in metus. In pellentesque.</p>
+               </div>
+            </div>
+            <div class="media-object">
+               <div class="media-object-section">
+                  <img class="thumbnail" src="http://placehold.it/100x100">
+               </div>
+               <div class="media-object-section">
+                  <h5>Nunc Eu Ullamcorper Orci</h5>
+                  <p>Quisque eget odio ac lectus vestibulum faucibus eget in metus. In pellentesque.</p>
+               </div>
+            </div>
+         </div>
+         <div class="medium-4 columns">
+            <h4>Top Products</h4>
+            <div class="media-object">
+               <div class="media-object-section">
+                  <img class="thumbnail" src="http://placehold.it/100x100">
+               </div>
+               <div class="media-object-section">
+                  <h5>Nunc Eu Ullamcorper Orci</h5>
+                  <p>Quisque eget odio ac lectus vestibulum faucibus eget in metus. In pellentesque.</p>
+               </div>
+            </div>
+            <div class="media-object">
+               <div class="media-object-section">
+                  <img class="thumbnail" src="http://placehold.it/100x100">
+               </div>
+               <div class="media-object-section">
+                  <h5>Nunc Eu Ullamcorper Orci</h5>
+                  <p>Quisque eget odio ac lectus vestibulum faucibus eget in metus. In pellentesque.</p>
+               </div>
+            </div>
+            <div class="media-object">
+               <div class="media-object-section">
+                  <img class="thumbnail" src="http://placehold.it/100x100">
+               </div>
+               <div class="media-object-section">
+                  <h5>Nunc Eu Ullamcorper Orci</h5>
+                  <p>Quisque eget odio ac lectus vestibulum faucibus eget in metus. In pellentesque.</p>
+               </div>
+            </div>
+         </div>
+         <div class="medium-4 columns">
+            <h4>Top Products</h4>
+            <div class="media-object">
+               <div class="media-object-section">
+                  <img class="thumbnail" src="http://placehold.it/100x100">
+               </div>
+               <div class="media-object-section">
+                  <h5>Nunc Eu Ullamcorper Orci</h5>
+                  <p>Quisque eget odio ac lectus vestibulum faucibus eget in metus. In pellentesque.</p>
+               </div>
+            </div>
+            <div class="media-object">
+               <div class="media-object-section">
+                  <img class="thumbnail" src="http://placehold.it/100x100">
+               </div>
+               <div class="media-object-section">
+                  <h5>Nunc Eu Ullamcorper Orci</h5>
+                  <p>Quisque eget odio ac lectus vestibulum faucibus eget in metus. In pellentesque.</p>
+               </div>
+            </div>
+            <div class="media-object">
+               <div class="media-object-section">
+                  <img class="thumbnail" src="http://placehold.it/100x100">
+               </div>
+               <div class="media-object-section">
+                  <h5>Nunc Eu Ullamcorper Orci</h5>
+                  <p>Quisque eget odio ac lectus vestibulum faucibus eget in metus. In pellentesque.</p>
+               </div>
+            </div>
+         </div>
+      </div>
