master: cleaning up template

--- a/web/static/css/app.scss
+++ b/web/static/css/app.scss
@@ -5,7 +5,7 @@
 
 
 .hero {
-  background: url('http://wallpoper.com/images/00/34/39/15/circuit-pcb_00343915.jpg') no-repeat center center;
+  background: blue no-repeat center center;
   background-size: cover;
   height: 500px;
   .intro {
